--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
     "build": "babel-node tools/run build",
     "deploy": "babel-node tools/run deployToAzureWebApps",
     "render": "babel-node tools/run render",
+    "debug": "babel-node-debug tools/run start",
     "serve": "babel-node tools/run runServer",
     "start": "babel-node tools/run start"
   }
